--- a/.github/workflows/profile-summary-cards.yaml
+++ b/.github/workflows/profile-summary-cards.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: vn7n24fzkq/github-profile-summary-cards@release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:                                                                                                      
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}  
         with:
           USERNAME: ${{ github.repository_owner }}
